resources/di_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sonataflow-platform-data-index-route
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: sonataflow-platform-data-index-service
